Added "All" condition to enable allow-only mode.